# websocket-websocketpp

./: CMakeLists.txt
discordpp/: websocket-websocketpp.hh
